# regex-bench

./: README.md  pyproject.toml
src/regex_bench/: __init__.py  analyzer.py  benchmark.py  cli.py  reporter.py
tests/: test_analyzer.py  test_benchmark.py  test_cli.py
