[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-bench"
version = "0.1.0"
description = "Benchmark and compare regex patterns to detect catastrophic backtracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "regex-bench contributors"}]
keywords = ["regex", "benchmark", "performance", "backtracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
regex-bench = "regex_bench.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/regex-bench"
Repository = "https://github.com/yourusername/regex-bench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]